--- a/fabricjs2Dshooter/practice.html
+++ b/fabricjs2Dshooter/practice.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>2D Shooter Game with Images and Sound</title>
+    <title>2D Shooter Game with Projectiles</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/4.5.0/fabric.min.js"></script>
     <style>
         canvas {
@@ -34,16 +34,12 @@
     <script>
         const canvas = new fabric.Canvas('gameCanvas');
 
-        // Set up a background image
-        fabric.Image.fromURL('https://github.com/ntriolo/ntriolo.github.io/blob/main/fabricjs2Dshooter/caveman%20background.jpeg?raw=true', function(img) {
-            img.scaleToWidth(canvas.width);
-            img.scaleToHeight(canvas.height);
-            canvas.setBackgroundImage(img, canvas.renderAll.bind(canvas));
-        });
+        // Set up a background color
+        canvas.setBackgroundColor('lightblue', canvas.renderAll.bind(canvas));
 
         // Sound effects
-        const shootSound = new Audio('bow-release-bow-and-arrow-4-101936.mp3'); // Replace with your sound file URL
-        const hitSound = new Audio('arrow-impact-87260.mp3'); // Replace with your sound file URL
+        const shootSound = new Audio('https://example.com/shoot-sound.mp3'); // Replace with your sound file URL
+        const hitSound = new Audio('https://example.com/hit-sound.mp3'); // Replace with your sound file URL
         const backgroundMusic = new Audio('https://example.com/background-music.mp3'); // Replace with your sound file URL
 
         // Play background music (looping)
@@ -52,7 +48,7 @@
 
         // Game elements
         let shooter;
-        const bullets = [];
+        const projectiles = [];
         const enemies = [];
 
         // Game state
@@ -68,170 +64,105 @@
             document.getElementById('lives').textContent = lives;
         }
 
-        // Load shooter image
-        fabric.Image.fromURL('https://github.com/ntriolo/ntriolo.github.io/blob/main/fabricjs2Dshooter/caveman-removebg-preview.png?raw=true', function(img) {
-            shooter = img.set({
-                left: 50,
-                top: canvas.height / 2 - 25,
-                originX: 'center',
-                originY: 'center',
-                scaleX: 0.1,
-                scaleY: 0.1
-            });
-            canvas.add(shooter);
+        // Shooter setup
+        shooter = new fabric.Rect({
+            left: 50,
+            top: canvas.height / 2 - 25,
+            width: 50,
+            height: 50,
+            fill: 'blue',
+            originX: 'center',
+            originY: 'center'
         });
+        canvas.add(shooter);
 
-        // Movement flags for smooth movement
+        // Movement flags
         let isMovingUp = false;
         let isMovingDown = false;
-        let isMovingLeft = false;
-        let isMovingRight = false;
 
         function moveShooter() {
-            if (!shooter) return;
-
-            const stepSize = 5; // Adjust step size for speed
+            const stepSize = 5;
 
             if (isMovingUp && shooter.top > 0) {
                 shooter.top -= stepSize;
             }
-            if (isMovingDown && shooter.top < canvas.height - shooter.height * shooter.scaleY) {
+            if (isMovingDown && shooter.top < canvas.height - shooter.height) {
                 shooter.top += stepSize;
-            }
-            if (isMovingLeft && shooter.left > 0) {
-                shooter.left -= stepSize;
-            }
-            if (isMovingRight && shooter.left < canvas.width - shooter.width * shooter.scaleX) {
-                shooter.left += stepSize;
             }
 
             shooter.setCoords();
             canvas.renderAll();
 
-            if (isMovingUp || isMovingDown || isMovingLeft || isMovingRight) {
+            if (isMovingUp || isMovingDown) {
                 requestAnimationFrame(moveShooter);
             }
         }
 
-        // Event listeners for key press and release for continuous movement
+        // Keydown and keyup event listeners
         document.addEventListener('keydown', (event) => {
             if (!gameRunning) return;
 
-            if (event.key === 'ArrowUp') {
-                console.log('ArrowUp pressed');
-                if (!isMovingUp) {
-                    isMovingUp = true;
-                    requestAnimationFrame(moveShooter);
-                }
-            } else if (event.key === 'ArrowDown') {
-                console.log('ArrowDown pressed');
-                if (!isMovingDown) {
-                    isMovingDown = true;
-                    requestAnimationFrame(moveShooter);
-                }
-            } else if (event.key === 'ArrowLeft') {
-                console.log('ArrowLeft pressed');
-                if (!isMovingLeft) {
-                    isMovingLeft = true;
-                    requestAnimationFrame(moveShooter);
-                }
-            } else if (event.key === 'ArrowRight') {
-                console.log('ArrowRight pressed');
-                if (!isMovingRight) {
-                    isMovingRight = true;
-                    requestAnimationFrame(moveShooter);
-                }
+            if (event.key === 'ArrowUp' && !isMovingUp) {
+                isMovingUp = true;
+                moveShooter();
+            } else if (event.key === 'ArrowDown' && !isMovingDown) {
+                isMovingDown = true;
+                moveShooter();
             } else if (event.key === ' ') {
-                console.log('Spacebar pressed');
                 shoot();
             }
         });
 
         document.addEventListener('keyup', (event) => {
             if (event.key === 'ArrowUp') {
-                console.log('ArrowUp released');
                 isMovingUp = false;
             } else if (event.key === 'ArrowDown') {
-                console.log('ArrowDown released');
                 isMovingDown = false;
-            } else if (event.key === 'ArrowLeft') {
-                console.log('ArrowLeft released');
-                isMovingLeft = false;
-            } else if (event.key === 'ArrowRight') {
-                console.log('ArrowRight released');
-                isMovingRight = false;
             }
         });
 
-        // Shooting bullets using a custom image
+        // Shooting projectiles
         function shoot() {
-            if (!shooter) return;
+            shootSound.play();
 
-            const shooterWidth = shooter.width * shooter.scaleX;
-            const shooterHeight = shooter.height * shooter.scaleY;
-
-            console.log('Shooting arrow'); // Debugging line
-            shootSound.play(); // Play shoot sound
-
-            // Load bullet image and set its size
-            fabric.Image.fromURL('https://github.com/ntriolo/ntriolo.github.io/blob/main/fabricjs2Dshooter/arrow-removebg-preview.png?raw=true', function(img) {
-                img.scaleToWidth(20); // Set width to 20 pixels
-                img.scaleToHeight(5); // Set height to 5 pixels
-
-                img.set({
-                    left: shooter.left + shooterWidth / 2 - img.width / 2,
-                    top: shooter.top + shooterHeight / 2 - img.height / 2,
-                    originX: 'center',
-                    originY: 'center'
-                });
-
-                console.log('Arrow added at position:', img.left, img.top);
-
-                bullets.push(img);
-                canvas.add(img);
-
-                // Animate the bullet
-                function moveBullet() {
-                    if (img.left < canvas.width) {
-                        img.left += 10; // Adjust speed as needed
-                        img.setCoords();
-                        canvas.renderAll();
-                        requestAnimationFrame(moveBullet);
-                    } else {
-                        canvas.remove(img);
-                        bullets.splice(bullets.indexOf(img), 1);
-                    }
-                }
-
-                moveBullet();
+            const projectile = new fabric.Circle({
+                left: shooter.left + shooter.width / 2,
+                top: shooter.top,
+                radius: 5,
+                fill: 'red',
+                originX: 'center',
+                originY: 'center'
             });
+
+            projectiles.push(projectile);
+            canvas.add(projectile);
         }
 
-        // Load enemy image and create an enemy
+        // Create enemies
         function createEnemy() {
-            fabric.Image.fromURL('https://github.com/ntriolo/ntriolo.github.io/blob/main/fabricjs2Dshooter/pig-removebg-preview.png?raw=true', function(img) {
-                const enemy = img.set({
-                    left: canvas.width,
-                    top: Math.random() * (canvas.height - 50),
-                    originX: 'center',
-                    originY: 'center',
-                    scaleX: 0.2,
-                    scaleY: 0.2
-                });
-                enemies.push(enemy);
-                canvas.add(enemy);
+            const enemy = new fabric.Rect({
+                left: canvas.width,
+                top: Math.random() * (canvas.height - 50),
+                width: 50,
+                height: 50,
+                fill: 'green',
+                originX: 'center',
+                originY: 'center'
             });
+
+            enemies.push(enemy);
+            canvas.add(enemy);
         }
 
-        // Update bullets and enemies
-        function updateBullets() {
-            for (let i = bullets.length - 1; i >= 0; i--) {
-                const bullet = bullets[i];
-                bullet.left += 10;
-                bullet.setCoords();
-                if (bullet.left > canvas.width) {
-                    canvas.remove(bullet);
-                    bullets.splice(i, 1);
+        // Update projectiles and enemies
+        function updateProjectiles() {
+            for (let i = projectiles.length - 1; i >= 0; i--) {
+                const projectile = projectiles[i];
+                projectile.left += 10;
+
+                if (projectile.left > canvas.width) {
+                    canvas.remove(projectile);
+                    projectiles.splice(i, 1);
                 }
             }
         }
@@ -240,12 +171,13 @@
             for (let i = enemies.length - 1; i >= 0; i--) {
                 const enemy = enemies[i];
                 enemy.left -= 5;
-                enemy.setCoords();
+
                 if (enemy.left < 0) {
                     canvas.remove(enemy);
                     enemies.splice(i, 1);
                     lives--;
                     updateHUD();
+
                     if (lives <= 0) {
                         stopGame();
                         alert('Game Over! Final Score: ' + score);
@@ -254,23 +186,22 @@
             }
         }
 
-        // Collision check
+        // Collision detection
         function checkCollisions() {
-            for (let i = bullets.length - 1; i >= 0; i--) {
-                const bullet = bullets[i];
+            for (let i = projectiles.length - 1; i >= 0; i--) {
+                const projectile = projectiles[i];
                 for (let j = enemies.length - 1; j >= 0; j--) {
                     const enemy = enemies[j];
-                    if (bullet.left + bullet.width / 2 > enemy.left - enemy.width / 2 &&
-                        bullet.left - bullet.width / 2 < enemy.left + enemy.width / 2 &&
-                        bullet.top + bullet.height / 2 > enemy.top - enemy.height / 2 &&
-                        bullet.top - bullet.height / 2 < enemy.top + enemy.height / 2) {
-                        // Play hit sound when a collision is detected
+                    if (projectile.intersectsWithObject(enemy)) {
                         hitSound.play();
-                        canvas.remove(bullet);
+
+                        canvas.remove(projectile);
                         canvas.remove(enemy);
-                        bullets.splice(i, 1);
+
+                        projectiles.splice(i, 1);
                         enemies.splice(j, 1);
-                        score += 10; // Increase score for hit
+
+                        score += 10;
                         updateHUD();
                         break;
                     }
@@ -280,20 +211,21 @@
 
         // Game loop
         function gameLoop() {
-            updateBullets();
+            updateProjectiles();
             updateEnemies();
             checkCollisions();
             canvas.renderAll();
+
             if (gameRunning) {
                 gameLoopId = requestAnimationFrame(gameLoop);
             }
         }
 
-        // Start game
+        // Start and stop game functions
         function startGame() {
             if (!gameRunning) {
                 gameRunning = true;
-                backgroundMusic.play(); // Start background music
+                backgroundMusic.play();
                 gameLoopId = requestAnimationFrame(gameLoop);
                 enemyIntervalId = setInterval(createEnemy, 2000);
                 document.getElementById('startButton').disabled = true;
@@ -301,11 +233,10 @@
             }
         }
 
-        // Stop game
         function stopGame() {
             if (gameRunning) {
                 gameRunning = false;
-                backgroundMusic.pause(); // Stop background music
+                backgroundMusic.pause();
                 cancelAnimationFrame(gameLoopId);
                 clearInterval(enemyIntervalId);
                 document.getElementById('startButton').disabled = false;
@@ -313,7 +244,7 @@
             }
         }
 
-        // Event listeners for game controls
+        // Event listeners for buttons
         document.getElementById('startButton').addEventListener('click', startGame);
         document.getElementById('stopButton').addEventListener('click', stopGame);
 
