--- a/fabricjs2Dshooter/practice.html
+++ b/fabricjs2Dshooter/practice.html
@@ -179,7 +179,7 @@
                 img.scaleToHeight(50); // Set height to 5 pixels
 
                 img.set({
-                    left: shooter.left + shooterWidth / 2 - img.width / 2,
+                   left: shooter.left + shooterWidth / 2,
                     top: shooter.top + shooterHeight / 2 - img.height / 2,
                     originX: 'center',
                     originY: 'center'
