--- a/fabricjs2Dshooter/practice.html
+++ b/fabricjs2Dshooter/practice.html
@@ -179,8 +179,8 @@
                 img.scaleToHeight(50); // Set height to 5 pixels
 
                 img.set({
-                   left: shooter.left + shooterWidth / 2,
-                    top: shooter.top + shooterHeight / 2 - img.height / 2,
+                    left: shooter.left + shooterWidth / 2, // Slightly to the right of the shooter
+            top: shooter.top + shooterHeight / 2 - img.height / 2, // Vertically aligned with the shooter's center
                     originX: 'center',
                     originY: 'center'
                 });
