--- a/fabricjs2Dshooter/practice.html
+++ b/fabricjs2Dshooter/practice.html
@@ -180,7 +180,7 @@
 
                 img.set({
                     left: shooter.left + shooterWidth / 2, // Slightly to the right of the shooter
-                top: shooter.top + (shooterHeight / 2) - img.height / 2
+                top: shooter.top + (shooterHeight / 2) - img.height / 2,
 
 
                     originX: 'center',
